tests/NormalTests/paczka1/fuzzy1/25779861.err
Error in line 4: eTVlnJVDy10 A511 59,4
Error in line 2: S870 S870 12,7
Error in line 31: eTVlnJVDy101S870116,9
Error in line 26: eTVlnJVDy10 S870 9,4
